--- a/Billing_Software/Billing_Software.vbproj
+++ b/Billing_Software/Billing_Software.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{9D4AC028-5B55-4156-A60C-BA981A833D46}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>Billing_Software.frm_ChangePassword</StartupObject>
+    <StartupObject>Billing_Software.frm_ManageProduct</StartupObject>
     <RootNamespace>Billing_Software</RootNamespace>
     <AssemblyName>Billing_Software</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -134,6 +134,12 @@
     <Compile Include="ADMIN\frm_mainAdmin.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ADMIN\frm_ManageProduct.Designer.vb">
+      <DependentUpon>frm_ManageProduct.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ADMIN\frm_ManageProduct.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="ADMIN\frm_ManageUser.Designer.vb">
       <DependentUpon>frm_ManageUser.vb</DependentUpon>
     </Compile>
@@ -175,6 +181,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ADMIN\frm_mainAdmin.resx">
       <DependentUpon>frm_mainAdmin.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ADMIN\frm_ManageProduct.resx">
+      <DependentUpon>frm_ManageProduct.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ADMIN\frm_ManageUser.resx">
       <DependentUpon>frm_ManageUser.vb</DependentUpon>
