--- a/Billing_Software/Billing_Software.vbproj
+++ b/Billing_Software/Billing_Software.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{9D4AC028-5B55-4156-A60C-BA981A833D46}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>Billing_Software.frm_ManageProduct</StartupObject>
+    <StartupObject>Billing_Software.frm_addGroup</StartupObject>
     <RootNamespace>Billing_Software</RootNamespace>
     <AssemblyName>Billing_Software</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -122,6 +122,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ADMIN\frm_addGroup.Designer.vb">
+      <DependentUpon>frm_addGroup.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ADMIN\frm_addGroup.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="ADMIN\frm_ChangePassword.Designer.vb">
       <DependentUpon>frm_ChangePassword.vb</DependentUpon>
     </Compile>
@@ -176,6 +182,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ADMIN\frm_addGroup.resx">
+      <DependentUpon>frm_addGroup.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ADMIN\frm_ChangePassword.resx">
       <DependentUpon>frm_ChangePassword.vb</DependentUpon>
     </EmbeddedResource>
