--- a/Billing_Software/packages.config
+++ b/Billing_Software/packages.config
@@ -5,6 +5,8 @@
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net48" />
   <package id="MessagingToolkit.Barcode" version="1.7.0.2" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1586.0" targetFramework="net48" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net48" />
