--- a/Billing_Software/Billing_Software.vbproj
+++ b/Billing_Software/Billing_Software.vbproj
@@ -246,6 +246,12 @@
     <Compile Include="CASHIER\frm_qty_add.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="CASHIER\view_bill.Designer.vb">
+      <DependentUpon>view_bill.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CASHIER\view_bill.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DataSet1.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -334,6 +340,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CASHIER\frm_qty_add.resx">
       <DependentUpon>frm_qty_add.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CASHIER\view_bill.resx">
+      <DependentUpon>view_bill.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_login.resx">
       <DependentUpon>frm_login.vb</DependentUpon>
