--- a/Billing_Software/App.config
+++ b/Billing_Software/App.config
@@ -29,6 +29,10 @@
         <assemblyIdentity name="K4os.Compression.LZ4.Streams" publicKeyToken="2186fa9121ef231d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.6.0" newVersion="1.3.6.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.25.1.0" newVersion="3.25.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
