--- a/Billing_Software/App.config
+++ b/Billing_Software/App.config
@@ -33,6 +33,10 @@
         <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.25.1.0" newVersion="3.25.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="ZstdSharp" publicKeyToken="8d151af33a4ad5cf" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.7.4.0" newVersion="0.7.4.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
