--- a/Billing_Software/Billing_Software.vbproj
+++ b/Billing_Software/Billing_Software.vbproj
@@ -272,6 +272,12 @@
       <DependentUpon>view_bill.vb</DependentUpon>
     </Compile>
     <Compile Include="CASHIER\view_bill.vb" />
+    <Compile Include="countBills.Designer.vb">
+      <DependentUpon>countBills.vb</DependentUpon>
+    </Compile>
+    <Compile Include="countBills.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DataSet1.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -375,6 +381,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CASHIER\view_bill.resx">
       <DependentUpon>view_bill.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="countBills.resx">
+      <DependentUpon>countBills.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
